@@ -12,7 +12,7 @@
 	Bong Cosca <bong.cosca@yahoo.com>
 
 		@package Yahoo
-		@version 2.0.11
+		@version 2.0.12
 **/
 
 //! API wrapper for Yahoo! Web services
